# icfpc2004-tbd

./: .gitignore  Cargo.toml  build.rs  tsconfig.json
data/: example_from_spec.ant
data/py/: _prelude.py  bouncing.py  example.py  spanning.py
src/: biology.rs  bouncing_ant.rs  cartography.rs  dev_server.rs  dump_trace.rs  example_module.rs  geography.rs  geometry.rs  magic.rs  magic_examples.rs  main.rs  neurology.rs  number_theory.rs  phenomenology.rs  prelude.rs  py2ant.rs  spanning_ant.rs  structured_compiler.rs  tournament.rs  utils.rs  vis_server.rs
src/py/: ast.rs  compiler.rs  mod.rs  tokenizer.rs  vm.rs
vis/: assert.ts  index.html  main.ts  select_match.html  select_match.ts  style.css  types.ts
